--- a/SeleniumFramework/pom.xml
+++ b/SeleniumFramework/pom.xml
@@ -48,6 +48,12 @@
 			<version>4.1.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.applitools</groupId>
+			<artifactId>eyes-selenium-java3</artifactId>
+			<version>3.160.2</version>
+		</dependency>
+
 
 	</dependencies>
 </project>
