Updated pom.xml added

--- a/SeleniumFramework/pom.xml
+++ b/SeleniumFramework/pom.xml
@@ -54,6 +54,22 @@
 			<version>3.160.2</version>
 		</dependency>
 
-
 	</dependencies>
+	<build>
+	<plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M4</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>${testngfile}</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+</plugins>
+	
+	
+	</build>
+	
 </project>
