--- a/SeleniumFramework/pom.xml
+++ b/SeleniumFramework/pom.xml
@@ -62,9 +62,14 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M4</version>
         <configuration>
-          <suiteXmlFiles>
+        <includes>
+        	<include>Test1.java</include>
+        </includes>
+        
+          <!--suiteXmlFiles>
             <suiteXmlFile>${testngfile}</suiteXmlFile>
-          </suiteXmlFiles>
+          </suiteXmlFiles> -->
+          
         </configuration>
       </plugin>
 </plugins>
